site x-overflow fixed

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #bg {
-	width: 100vw;
+	width: 100%;
 	height: 110vh;
 	background: url(./purpleBG2.png) no-repeat;
 	background-size: 100% 100%;
@@ -61,11 +61,11 @@ body {
 .options {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	align-content: center;
 
-	width: 99vw;
+	/* width: 99vw; */
 	border: 0;
 	/* border: gold solid; */
 }
@@ -102,7 +102,7 @@ body {
 		/* position: relative; */
 		transition: all 1s ease-out;
 		position: fixed;
-		width: 100vw;
+		width: 100%;
 		height: 12vh;
 	}
 	
@@ -123,7 +123,7 @@ body {
 		position: fixed;
 		background: #7868E6;
 		height: 100vh;
-		width: 100vw;
+		width: 100%;
 		clip-path: circle(100px at 90% -20%);
 		-webkit-clip-path: circle(100px at 90% -20%);
 		/* transform: translateX(-40%) */
@@ -348,7 +348,7 @@ body {
 }
 
 .base img{
-	width: 100vw;
+	width: 100%;
 }
 
 @media screen and (max-width:768px) {
@@ -406,5 +406,5 @@ body {
 .footer {
 	background-color: #7868E6;
 	height: 20vh;
-	width: 100vw;
+	width: 100%;
 }
